# sw-craft

./: .gitignore  README.md  main.sh
learn-doctest/: CMakeLists.txt  README.md
learn-doctest/include/: doctest.h
learn-doctest/src/: kata.cpp
posts/: cnm.md  using-mobbing-to-learn-tdd.md  usnig-mobbing-to-learn-tdd.md
tdd-samples/bowling-game/: README.md
tdd-samples/bowling-game/src/: kata.cpp
tdd-samples/callback-infra/: CMakeLists.txt  README.md  compile_commands.json  watch.sh
tdd-samples/callback-infra/acc/: CMakeLists.txt  aTest.cpp
tdd-samples/callback-infra/include/: solution.h
tdd-samples/callback-infra/int/: CMakeLists.txt  main.cpp
tdd-samples/callback-infra/src/: CMakeLists.txt  implementation.h  kata.cpp  solution.cpp
tdd-samples/callback-infra/src/test/: learning.cpp  spec.cpp  worker_spec.cpp
tdd-samples/prime-factors/: watch.sh
tdd-samples/prime-factors/src/: kata.cpp
tdd-samples/wav2mp3/: README.md  cv.bash  driver.py  rent.py
